cabal-version: 2.2
name: its-raining-letters
version: 0

executable its-raining-letters
  build-depends:
      base
    , bytestring
    , containers
    , mwc-random
    , reactive-banana
    , stm
    , unordered-containers
    , vty
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts "-with-rtsopts=-N"
  main-is: Main.hs
